# optimizer

./: .gitattributes  .gitignore  AJBellFund.py  README.md  pyproject.toml  query_by_property_and_find_least_correlated.py  query_by_sql.py  sharpe_calculator.py  step01_download_hl.py  step02_fidelity_risk_ratings.py  step03_quotes_ft.py  step03_yahoo.py  step04_calculate_correlation_matrix.py  step04_quotes_yahoo.py  step05_calculate_correlation_matrix.py  step05_optimize_portfolio.py  step06_optimize_portfolio.py  yahoo_sharpe_analyzer.py
.github/workflows/: ci.yaml  download.yaml  step01.yaml  step02.yaml  step03.yaml  step04.yaml  step05.yaml
output/: cm.csv  hl.csv  step01.csv
output/quotes/: 0P00000AMZ.json  0P00000ANV.json  0P00000AP6.F.json  0P00000C7Y.L.json  0P00000CJ6.L.json  0P00000CJI.L.json  0P00000CJK.L.json  0P00000CJM.L.json  0P00000CJU.L.json  0P00000CNR.L.json  0P00000DC1.L.json  0P00000DIQ.L.json  0P00000DNK.L.json  0P00000DYK.L.json  0P00000DYQ.L.json  0P00000E35.L.json  0P00000EBQ.json  0P00000EU6.L.json  0P00000FI2.L.json  0P00000G9E.L.json  0P00000GA6.L.json  0P00000GCY.L.json  0P00000H6Q.L.json  0P00000HSR.L.json  0P00000ITZ.L.json  0P00000LOS.L.json  0P00000ML4.L.json  0P00000MNK.json  0P00000MW1.L.json  0P00000NGG.L.json  0P00000QW5.L.json  0P00000QW6.L.json  0P00000QW7.L.json  0P00000QW9.L.json  0P00000QWA.L.json  0P00000QWD.L.json  0P00000QWE.L.json  0P00000QWF.L.json  0P00000QWH.L.json  0P00000QWI.L.json  (+3742 more)
output/quotes_yahoo/: 0P00000AMZ.json  0P00000ANV.json  0P00000AP6.F.json  0P00000C7Y.L.json  0P00000CCH.L.json  0P00000CJ6.L.json  (+3815 more)
