[tool.poetry]
name = "optimizer"
version = "0.1.0"
description = "There is no good description yet"
authors = ["sillyc0n <137494122+sillyc0n@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandasql = "^0.7.3"
pandas = "^2.2.3"
argparse = "^1.4.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
tenacity = "^9.0.0"
curl-cffi = "^0.11.1"

